--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="./style/style.css">
 	<script src="./dist/main.js" defer></script>
-	<title>OZONE</title>
+	<title>OZON</title>
 </head>
 
 <body>
